changes in card colors, and removing emojis

--- a/3_n_homepage_preview (1).html
+++ b/3_n_homepage_preview (1).html
@@ -252,7 +252,7 @@
           <div class="brand-tagline">Results. Delivered.</div>
         </div>
       </div>
-      <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
+      <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
       <nav class="nav-links">
         <a href="#" class="active">Home</a>
         <a href="#">About Us</a>
@@ -516,7 +516,7 @@
         </div>
       </div>
       <div class="footer-links">
-        <a href="#">🔗 LinkedIn</a>
+        <a href="#">LinkedIn</a>
         <a href="#">About Us</a>
         <a href="#">Service Lines</a>
         <a href="#">Careers</a>
