--- a/aaa.html
+++ b/aaa.html
@@ -401,7 +401,7 @@
           <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
         </div>
       </div>
-      <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
+      <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
       <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
@@ -453,7 +453,7 @@
     <section class="section">
       <div class="section-inner">
         <div class="section-header">
-          <h2 class="section-title">⚙️ How AAA Works</h2>
+          <h2 class="section-title">How AAA Works</h2>
         </div>
 
         <div class="how-it-works">
@@ -478,7 +478,7 @@
     <section class="section section-alt">
       <div class="section-inner">
         <div class="section-header">
-          <h2 class="section-title">🧩 The Three Phases of AAA</h2>
+          <h2 class="section-title">The Three Phases of AAA</h2>
           <p class="section-subtitle">
             Each AAA engagement moves through three integrated, iterative phases that transform data into decisions and decisions into results.
           </p>
@@ -553,7 +553,7 @@
     <section class="section">
       <div class="section-inner">
         <div class="section-header">
-          <h2 class="section-title">🚀 Speed with Substance</h2>
+          <h2 class="section-title">Speed with Substance</h2>
           <p class="section-subtitle">
             3N's AAA Enabler harmonizes O-RAM's strategic rigor with execution velocity—helping clients move from analysis to action with confidence.
           </p>
@@ -601,7 +601,7 @@
         <p style="color: #6b7280;">Results. Delivered.</p>
       </div>
       <div class="footer-links">
-        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">🔗 LinkedIn</a>
+        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
