--- a/about.html
+++ b/about.html
@@ -144,8 +144,8 @@
     }
 
     .value-box {
-      background: #ffffff;
-      border: 1px solid #e5e7eb;
+      background: #001f3f;
+      border: 1px solid #1e3a8a;
       border-radius: 1rem;
       padding: 1.5rem;
       box-shadow: 0 12px 30px rgba(15,23,42,0.04);
@@ -154,13 +154,13 @@
     .value-box h4 {
       font-size: 1.1rem;
       font-weight: 700;
-      color: #020617;
+      color: #ffffff;
       margin-bottom: 0.5rem;
     }
 
     .value-box p {
       font-size: 0.95rem;
-      color: #6b7280;
+      color: #e5e7eb;
     }
 
     .cta-section {
@@ -235,7 +235,7 @@
           <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
         </div>
       </div>
-      <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
+      <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
       <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="about.html" class="active">About Us</a>
@@ -353,7 +353,7 @@
         <p style="color: #6b7280;">Results. Delivered.</p>
       </div>
       <div class="footer-links">
-        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">🔗 LinkedIn</a>
+        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
