--- a/digital-transformation.html
+++ b/digital-transformation.html
@@ -204,7 +204,7 @@
       <div class="brand">
         <img src="images/3nlogo.png" alt="3N Consulting Logo" style="height: 70px; width: auto; max-width: 250px;">
       </div>
-      <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
+      <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
       <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
@@ -441,7 +441,7 @@
       </div>
       <img src="images/logos/Certified NMSDC MBE Logo.png" alt="Footer Image" class="footer-image">
       <div class="footer-links">
-        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">🔗 LinkedIn</a>
+        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
         <a href="about.html">About Us</a>
         <a href="services.html">Service Lines</a>
         <a href="careers.html">Careers</a>
