--- a/toolkit.html
+++ b/toolkit.html
@@ -276,7 +276,7 @@
           <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
         </div>
       </div>
-      <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
+      <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
       <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
@@ -318,7 +318,6 @@
           <!-- O-RAM Card -->
           <a href="o-ram.html" style="text-decoration: none; color: inherit;">
             <div class="toolkit-card">
-              <div class="toolkit-card-icon">🔍</div>
               <h3 class="toolkit-card-title">Organizational Readiness Assessment Methodology (O-RAM)</h3>
               <p class="toolkit-card-description">
                 A comprehensive diagnostic framework that evaluates organizational capacity, alignment, and readiness for strategic initiatives and transformation efforts.
@@ -338,7 +337,6 @@
           <!-- AAA Card -->
           <a href="aaa.html" style="text-decoration: none; color: inherit;">
             <div class="toolkit-card">
-              <div class="toolkit-card-icon">⚡</div>
               <h3 class="toolkit-card-title">Assess–Align–Accelerate (AAA)</h3>
               <p class="toolkit-card-description">
                 A three-phase engagement model that systematically assesses challenges, aligns leadership and teams, and accelerates implementation of solutions and outcomes.
@@ -375,7 +373,7 @@
         <p style="color: #6b7280;">Results. Delivered.</p>
       </div>
       <div class="footer-links">
-        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">🔗 LinkedIn</a>
+        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
