--- a/manufacturing.html
+++ b/manufacturing.html
@@ -223,7 +223,7 @@
           <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
         </div>
       </div>
-      <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
+      <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
       <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
@@ -452,7 +452,7 @@
       </div>
       <img src="images/logos/Certified NMSDC MBE Logo.png" alt="Footer Image" class="footer-image">
       <div class="footer-links">
-        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">🔗 LinkedIn</a>
+        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
         <a href="contact.html">Contact</a>
         <a href="disclaimers.html">Disclaimers</a>
       </div>
