added profile pic to respective pages

--- a/anirudh-peesay.html
+++ b/anirudh-peesay.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Dyan Sellers - Senior Manager, Human Capital & Organizational Transformation | 3N Consulting</title>
+  <title>Anirudh (Anu) Peesay - 3N Consulting</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     /* Inline CSS so this preview actually renders with layout */
@@ -153,6 +153,28 @@
       margin-bottom: 1.5rem;
     }
 
+    .coming-soon-box {
+      background: linear-gradient(135deg, #f0f9ff 0%, #e0f2fe 100%);
+      border: 2px solid #38bdf8;
+      border-radius: 1rem;
+      padding: 3rem 2rem;
+      text-align: center;
+      margin: 2rem 0;
+    }
+
+    .coming-soon-box h3 {
+      font-size: 1.5rem;
+      font-weight: 700;
+      color: #020617;
+      margin-bottom: 1rem;
+    }
+
+    .coming-soon-box p {
+      color: #4b5563;
+      font-size: 1rem;
+      margin-bottom: 1.5rem;
+    }
+
     .cta-section {
       text-align: center;
       padding: 2rem;
@@ -245,69 +267,24 @@
     <section class="hero">
       <div class="hero-inner">
         <div>
-          <div class="hero-eyebrow">Our Team</div>
-          <h1 class="hero-title">Dyan Sellers</h1>
-          <div class="hero-subtitle">Senior Manager, Human Capital & Organizational Transformation</div>
+          <div class="hero-eyebrow">Meet Our Team</div>
+          <h1 class="hero-title">Anirudh (Anu) Peesay</h1>
           <p class="hero-body">
-            15+ Years of HR & Organizational Transformation Experience | Workforce Modernization & Process Improvement Expert
+            Dedicated professional and valued member of the 3N Consulting team.
           </p>
         </div>
         <div>
-          <img src="images/team members/Dyan Sellers.jpg" alt="Dyan Sellers" class="hero-image">
+          <img src="images/team members/Anu Peesay.png" alt="Anirudh (Anu) Peesay" class="hero-image">
         </div>
       </div>
     </section>
 
-    <!-- BIOGRAPHY SECTION -->
+    <!-- COMING SOON SECTION -->
     <section class="section section-alt">
       <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Biography</h2>
-        </div>
-        <div class="bio-section">
-          <p>
-            Ms. Dyan Sellers is a seasoned human resources and organizational transformation executive with more than 15 years of experience leading workforce modernization, classification alignment, and process improvement initiatives across K–12 education systems, local government, and nonprofit sectors. She combines strategic HR leadership with operational execution—an approach that consistently delivers measurable improvements in efficiency, equity, and workforce engagement.
-          </p>
-          <p>
-            At 3N Consulting, Ms. Sellers leads Human Resources and Finance workstreams for organizational assessments and operational redesign engagements, including the Calvert County Public Schools Operating & Efficiency Assessment. Her expertise in workforce planning, process automation, and human capital analytics ensures clients receive practical, data-informed recommendations that strengthen both institutional effectiveness and employee experience.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- PROFESSIONAL EXPERIENCE SECTION -->
-    <section class="section">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Professional Experience</h2>
-        </div>
-        <div class="bio-section">
-          <p>
-            <strong>Baltimore City Council:</strong> Ms. Sellers currently serves as Director of Member Services for the Baltimore City Council, where she oversees all HR functions, including recruitment, compensation, performance management, and organizational development. In this role, she modernized personnel structures, digitized HR processes, and introduced transparent systems that improved compliance and accountability across Council operations.
-          </p>
-          <p>
-            <strong>Baltimore City Public Schools:</strong> Previously, Ms. Sellers held senior leadership roles at Baltimore City Public Schools, where she directed teacher recruitment and selection for an 8,000-employee district—achieving the lowest teacher vacancy rate in more than a decade. She also spearheaded HRIS modernization and equity-focused policy reform initiatives, aligning classification and compensation frameworks to ensure consistency and fairness system-wide.
-          </p>
-          <p>
-            <strong>Edgility Consulting:</strong> As a former Principal Consultant at Edgility Consulting, Ms. Sellers advised school districts, education agencies, and nonprofits nationwide on equitable hiring, workforce restructuring, and HR modernization. Her consulting engagements regularly produced improvements in recruitment efficiency, employee satisfaction, and diversity outcomes.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- EDUCATION & CREDENTIALS SECTION -->
-    <section class="section section-alt">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Education & Credentials</h2>
-        </div>
-        <div class="bio-section">
-          <p>
-            Ms. Sellers holds a <strong>Master of Science in Human Resources Management</strong> from The Catholic University of America and a <strong>Bachelor of Science in Zoology</strong> from the University of Michigan.
-          </p>
-          <p>
-            Her work is guided by a belief that strong, equitable people systems are the foundation of every high-performing organization.
-          </p>
+        <div class="coming-soon-box">
+          <h3>Profile Information Coming Soon</h3>
+          <p>We're preparing a comprehensive profile highlighting Anirudh's expertise, experience, and contributions to the 3N Consulting team. Check back soon for more details!</p>
         </div>
       </div>
     </section>
@@ -316,9 +293,9 @@
     <section class="section">
       <div class="section-inner">
         <div class="cta-section">
-          <h3 style="font-size: 1.3rem; margin-bottom: 1rem;">Ready to Transform Your Organization?</h3>
-          <p style="margin-bottom: 1.5rem; color: #4b5563;">Let's discuss how human capital strategy and organizational transformation can drive sustainable performance.</p>
-          <a href="contact.html" class="btn btn-primary">Contact Us →</a>
+          <h3 style="font-size: 1.3rem; margin-bottom: 1rem;">Connect With Our Team</h3>
+          <p style="margin-bottom: 1.5rem; color: #4b5563;">Want to learn more about 3N Consulting and our team's expertise?</p>
+          <a href="contact.html" class="btn btn-primary">Get in Touch →</a>
         </div>
       </div>
     </section>
