--- a/thought-leadership.html
+++ b/thought-leadership.html
@@ -328,7 +328,7 @@
             <div class="team-card">
               <img src="images/team members/Rachel DeMuth.png" alt="Rachel DeMuth" class="team-card-image">
               <h3>Rachel DeMuth</h3>
-              <p>View Insights →</p>
+              <p>View Profile →</p>
             </div>
           </a>
           
@@ -336,7 +336,7 @@
             <div class="team-card">
               <img src="images/team members/Nick Gupta.png" alt="Nick Gupta" class="team-card-image">
               <h3>Nick Gupta</h3>
-              <p>View Insights →</p>
+              <p>View Profile →</p>
             </div>
           </a>
           
@@ -352,7 +352,7 @@
             <div class="team-card">
               <img src="images/team members/David Hochman.jpg" alt="David Hochman" class="team-card-image">
               <h3>David Hochman</h3>
-              <p>View Insights →</p>
+              <p>View Profile →</p>
             </div>
           </a>
         </div>
@@ -392,16 +392,7 @@
       </div>
     </section>
 
-    <!-- SUBMIT ARTICLE CTA -->
-    <section class="section">
-      <div class="section-inner">
-        <div class="cta-box">
-          <h3>Submit an Article</h3>
-          <p>Have insights to share? We're always looking for thoughtful perspectives on consulting, business strategy, and organizational transformation.</p>
-          <a href="mailto:info@3nconsultinggroup.com" class="btn btn-primary">Submit Your Article →</a>
-        </div>
-      </div>
-    </section>
+
   </main>
 
   <footer class="site-footer">
