--- a/david-mann.html
+++ b/david-mann.html
@@ -71,9 +71,18 @@
       max-width: 1120px;
       margin: 0 auto;
       display: grid;
-      grid-template-columns: minmax(0, 1fr);
+      grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
       gap: 3rem;
       align-items: center;
+    }
+    
+    .hero-image {
+      width: 100%;
+      max-width: 300px;
+      margin: 0 auto;
+      border-radius: 1rem;
+      box-shadow: 0 20px 50px rgba(56,189,248,0.2);
+      object-fit: cover;
     }
     .hero-eyebrow {
       text-transform: uppercase;
@@ -200,6 +209,7 @@
     @media (max-width: 768px) {
       .hero { padding: 3rem 1.5rem 2rem; }
       .section { padding: 2rem 1.5rem; }
+      .hero-inner { grid-template-columns: minmax(0, 1fr); }
     }
   </style>
 </head>
@@ -241,6 +251,9 @@
           <p class="hero-body">
             EOS Chairman | Venture Capital & Private Equity Leader | Entrepreneurial Strategy Expert | Former U.S. Navy Officer
           </p>
+        </div>
+        <div>
+          <img src="images/team members/David Mann.png" alt="David O. Mann" class="hero-image">
         </div>
       </div>
     </section>
