--- a/dhatri-mulpuri.html
+++ b/dhatri-mulpuri.html
@@ -71,9 +71,18 @@
       max-width: 1120px;
       margin: 0 auto;
       display: grid;
-      grid-template-columns: minmax(0, 1fr);
+      grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
       gap: 3rem;
       align-items: center;
+    }
+    
+    .hero-image {
+      width: 100%;
+      max-width: 300px;
+      margin: 0 auto;
+      border-radius: 1rem;
+      box-shadow: 0 20px 50px rgba(56,189,248,0.2);
+      object-fit: cover;
     }
     .hero-eyebrow {
       text-transform: uppercase;
@@ -200,6 +209,7 @@
     @media (max-width: 768px) {
       .hero { padding: 3rem 1.5rem 2rem; }
       .section { padding: 2rem 1.5rem; }
+      .hero-inner { grid-template-columns: minmax(0, 1fr); }
     }
   </style>
 </head>
@@ -240,6 +250,9 @@
           <p class="hero-body">
             Master of Science in Data Intelligence | 5+ Years of Experience | Data Analytics & Engineering Specialist
           </p>
+        </div>
+        <div>
+          <img src="images/team members/Dhatri Mulpuri.png" alt="Dhatri Mulpuri" class="hero-image">
         </div>
       </div>
     </section>
