--- a/human-capital.html
+++ b/human-capital.html
@@ -245,7 +245,7 @@
           <div class="section-kicker">Human Capital</div>
           <h2 class="section-title">Empowering People to Drive Performance</h2>
           <p class="section-subtitle">
-            At 3N Consulting, we believe that organizational transformation succeeds or fails on one factor above all others — people. Our Human Capital practice helps organizations align their workforce, leadership, and culture with strategic goals to achieve measurable improvements in performance, engagement, and service delivery.
+            At 3N Consulting, we believe that organizational transformation succeeds or fails on one factor above all others: people. Our Human Capital practice helps organizations align their workforce, leadership, and culture with strategic goals to achieve measurable improvements in performance, engagement, and service delivery.
           </p>
         </div>
         <p style="color: #4b5563; line-height: 1.7; font-size: 0.98rem; margin-top: 1rem;">
