--- a/strategy-operations.html
+++ b/strategy-operations.html
@@ -246,7 +246,7 @@
           <h2 class="section-title">From Vision to Execution — Building Organizations That Think Strategically and Operate Efficiently</h2>
         </div>
         <p class="section-subtitle" style="max-width: 50rem;">
-          3N Consulting's Strategy & Operations practice helps organizations define where they want to go — and build the operational discipline to get there. We partner with executives, boards, and public leaders to translate ambition into structured, achievable results. Our methodology integrates corporate strategy, financial analysis, organizational design, and Lean operational transformation — giving decision-makers clarity, alignment, and measurable performance improvement.
+          3N Consulting's Strategy & Operations practice helps organizations define where they want to go, and build the operational discipline to get there. We partner with executives, boards, and public leaders to translate ambition into structured, achievable results. Our methodology integrates corporate strategy, financial analysis, organizational design, and Lean operational transformation — giving decision-makers clarity, alignment, and measurable performance improvement.
         </p>
       </div>
     </section>
