updated logo and added more pics

--- a/aaa.html
+++ b/aaa.html
@@ -286,15 +286,15 @@
     }
 
     .outcome-badge {
-      background: linear-gradient(135deg, #ecfdf5 0%, #d1fae5 100%);
-      border-left: 4px solid #10b981;
+      background: linear-gradient(135deg, #f0f9ff 0%, #e0f2fe 100%);
+      border-left: 4px solid #0ea5e9;
       padding: 1rem;
       margin-top: 1rem;
       border-radius: 0.5rem;
     }
 
     .outcome-badge strong {
-      color: #047857;
+      color: #0c4a6e;
       display: block;
       margin-bottom: 0.3rem;
       font-size: 0.9rem;
@@ -303,7 +303,7 @@
     }
 
     .outcome-badge p {
-      color: #4b5563;
+      color: #164e63;
       font-size: 0.95rem;
     }
 
@@ -394,7 +394,7 @@
     <div class="nav-inner">
       <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
         <div>
-          <img src="images/logos/3N Consulting.png" alt="3N Consulting Logo" style="height: 90px; width: auto; max-width: 300px;">
+          <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo" style="height: 90px; width: auto; max-width: 300px;">
         </div>
         <div style="display: flex; flex-direction: column; line-height: 1.1;">
           <div style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">3N Consulting</div>
@@ -578,6 +578,15 @@
           <p style="margin: 0; font-size: 1rem; line-height: 1.8; color: #4b5563;">
             Whether serving a Fortune 500 firm, portfolio of a private equity investment, state agency, higher-education institution, or K–12 district, 3N's Assess–Align–Accelerate model empowers leaders to act decisively—turning insight into impact faster than ever before.
           </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- IMAGE SECTION -->
+    <section class="section">
+      <div class="section-inner">
+        <div style="border-radius: 1rem; overflow: hidden; box-shadow: 0 12px 30px rgba(15,23,42,0.04);">
+          <img src="images/AAApic.png" alt="Assess-Align-Accelerate Model" style="width: 100%; height: auto; display: block;">
         </div>
       </div>
     </section>
