--- a/cloud-based-future.html
+++ b/cloud-based-future.html
@@ -214,8 +214,8 @@
     }
 
     .results-highlight {
-      background: #f0fdf4;
-      border-left: 4px solid #34d399;
+      background: #f0f9ff;
+      border-left: 4px solid #0ea5e9;
       border-radius: 0.5rem;
       padding: 1.5rem;
       margin: 2rem 0;
@@ -224,12 +224,12 @@
     .results-highlight h4 {
       font-size: 1.1rem;
       font-weight: 700;
-      color: #065f46;
+      color: #0c4a6e;
       margin-bottom: 0.5rem;
     }
 
     .results-highlight p {
-      color: #166534;
+      color: #164e63;
       font-size: 0.95rem;
       line-height: 1.6;
     }
@@ -300,7 +300,7 @@
     <div class="nav-inner">
       <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
         <div>
-          <img src="images/logos/3N Consulting.png" alt="3N Consulting Logo" style="height: 90px; width: auto; max-width: 300px;">
+          <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo" style="height: 90px; width: auto; max-width: 300px;">
         </div>
         <div style="display: flex; flex-direction: column; line-height: 1.1;">
           <div style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">3N Consulting</div>
@@ -381,6 +381,15 @@
           <p style="margin-top: 1.5rem;">
             The O-RAM process identified readiness levels across five dimensions—leadership, governance, people, technology, and process—and generated a prioritized transformation roadmap from 2024 to 2027.
           </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- IMAGE SECTION -->
+    <section class="section">
+      <div class="section-inner">
+        <div style="border-radius: 1rem; overflow: hidden; box-shadow: 0 12px 30px rgba(15,23,42,0.04);">
+          <img src="images/case study 2 pic.png" alt="Cloud-Based Future Case Study" style="width: 100%; height: auto; display: block;">
         </div>
       </div>
     </section>
