--- a/disclaimers.html
+++ b/disclaimers.html
@@ -187,7 +187,7 @@
     <div class="nav-inner">
       <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
         <div>
-          <img src="images/logos/3N Consulting.png" alt="3N Consulting Logo" style="height: 90px; width: auto; max-width: 300px;">
+          <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo" style="height: 90px; width: auto; max-width: 300px;">
         </div>
         <div style="display: flex; flex-direction: column; line-height: 1.1;">
           <div style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">3N Consulting</div>
