--- a/o-ram-case-study.html
+++ b/o-ram-case-study.html
@@ -300,7 +300,7 @@
     <div class="nav-inner">
       <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
         <div>
-          <img src="images/logos/3N Consulting.png" alt="3N Consulting Logo" style="height: 90px; width: auto; max-width: 300px;">
+          <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo" style="height: 90px; width: auto; max-width: 300px;">
         </div>
         <div style="display: flex; flex-direction: column; line-height: 1.1;">
           <div style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">3N Consulting</div>
@@ -417,6 +417,10 @@
           <p>
             3N analyzed annual average spend in various dimensions and identified critical inefficiencies across operational spend, non-strategic sourcing, and commodity categories.
           </p>
+        </div>
+
+        <div style="margin: 2.5rem 0;">
+          <img src="images/case study 1 pic.png" alt="Organizational Readiness Assessment Methodology O-RAM" style="width: 100%; border-radius: 1rem; box-shadow: 0 10px 25px rgba(15, 23, 42, 0.1);">
         </div>
       </div>
     </section>
