edited oram case study

--- a/o-ram-case-study.html
+++ b/o-ram-case-study.html
@@ -214,8 +214,8 @@
     }
 
     .results-highlight {
-      background: #f0fdf4;
-      border-left: 4px solid #34d399;
+      background: #f0f9ff;
+      border-left: 4px solid #0ea5e9;
       border-radius: 0.5rem;
       padding: 1.5rem;
       margin: 2rem 0;
@@ -224,12 +224,12 @@
     .results-highlight h4 {
       font-size: 1.1rem;
       font-weight: 700;
-      color: #065f46;
+      color: #0c4a6e;
       margin-bottom: 0.5rem;
     }
 
     .results-highlight p {
-      color: #166534;
+      color: #164e63;
       font-size: 0.95rem;
       line-height: 1.6;
     }
