--- a/index.html
+++ b/index.html
@@ -186,6 +186,14 @@
       padding: 1.1rem 1.1rem 1.25rem;
       box-shadow: 0 12px 30px rgba(15,23,42,0.04);
       color: #ffffff;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .card:has(a) {
+      cursor: pointer;
+    }
+    .card:has(a):hover {
+      transform: translateY(-6px);
+      box-shadow: 0 20px 50px rgba(56,189,248,0.15);
     }
     .card-title {
       font-size: 1rem;
