fixed footer in case-studies.html

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
             <span class="chip">NMSDC Certified MBE</span>
           </div>
           <div class="hero-cta">
-            <a href="#" class="btn btn-primary">Discuss your initiative →</a>
+            <a href="contact.html" class="btn btn-primary">Discuss your initiative →</a>
             <a href="case-studies.html" class="btn btn-primary">View recent case studies</a>
           </div>
         </div>
