--- a/services.html
+++ b/services.html
@@ -168,6 +168,12 @@
       justify-content: space-between;
       min-height: 250px;
       width: 100%;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      cursor: pointer;
+    }
+    .services-list a:hover .service-item {
+      transform: translateY(-6px);
+      box-shadow: 0 20px 50px rgba(56,189,248,0.15);
     }
 
     .service-item h3 {
