--- a/case-studies.html
+++ b/case-studies.html
@@ -304,7 +304,7 @@
 
             <article class="case-study-card">
                 <div class="case-study-number">4</div>
-                <h3>From Data Silos to Data Strategy: How 3N Consulting Built a Statewide Analytics Platform to Strengthen Maryland's Educator Pipeline</h3>
+                <h3>Strengthening Maryland's Educator Pipeline</h3>
                 <p>A transformative data integration project consolidating fragmented systems into a unified analytics platform, enabling data-driven decision-making for educational excellence.</p>
                 <a href="data-silos.html" class="case-study-link">Explore →</a>
             </article>
