updated anirudh's info

--- a/thought-leadership.html
+++ b/thought-leadership.html
@@ -376,7 +376,7 @@
           <a href="anirudh-peesay.html" style="text-decoration: none; color: inherit;">
             <div class="team-card">
               <img src="images/team members/Anu Peesay.png" alt="Anirudh (Anu) Peesay" class="team-card-image">
-              <h3>Anirudh (Anu) Peesay</h3>
+              <h3>Anirudh ("Anu") Peesay</h3>
               <p>View Profile →</p>
             </div>
           </a>
