--- a/anirudh-peesay.html
+++ b/anirudh-peesay.html
@@ -268,7 +268,7 @@
       <div class="hero-inner">
         <div>
           <div class="hero-eyebrow">Meet Our Team</div>
-          <h1 class="hero-title">Anirudh (Anu) Peesay</h1>
+          <h1 class="hero-title">Anirudh ("Anu") Peesay</h1>
           <p class="hero-body">
             Dedicated professional and valued member of the 3N Consulting team.
           </p>
@@ -279,12 +279,25 @@
       </div>
     </section>
 
-    <!-- COMING SOON SECTION -->
+    <!-- BIO SECTION -->
     <section class="section section-alt">
       <div class="section-inner">
-        <div class="coming-soon-box">
-          <h3>Profile Information Coming Soon</h3>
-          <p>We're preparing a comprehensive profile highlighting Anirudh's expertise, experience, and contributions to the 3N Consulting team. Check back soon for more details!</p>
+        <div class="bio-section">
+          <h2 class="section-title">About Anu</h2>
+          <p>Anu Peesay is the Assistant to the CEO at 3N Consulting, where he supports organizational strategy through data analysis, programming, and the application of mathematical modeling to business challenges. He brings a structured, analytical approach to problem-solving and plays a key role in developing internal systems, documentation, and technical processes that strengthen operational efficiency.</p>
+          <p>At 3N, Anu contributes to firmwide initiatives that enhance digital infrastructure and knowledge management. He is currently leading the design and deployment of the 3N Consulting Group website, ensuring that the firm's online presence reflects its mission, capabilities, and client-centered approach. His work emphasizes clarity, technical precision, and an evidence-based mindset that supports informed decision-making across projects.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- BACKGROUND & EXPERTISE SECTION -->
+    <section class="section">
+      <div class="section-inner">
+        <div class="bio-section">
+          <h2 class="section-title">Background & Expertise</h2>
+          <p>A Maryland native, Anu holds a Bachelor of Science in Applied Mathematics with a concentration in Mathematical Biology from the University of Pittsburgh. His academic background shapes his ability to transform complex quantitative and qualitative information into clear insights that guide organizational priorities and illuminate areas for strategic improvement.</p>
+          <h3 style="font-size: 1.2rem; font-weight: 700; color: #020617; margin-top: 1.5rem; margin-bottom: 1rem;">Core Competencies:</h3>
+          <p>Data analysis and visualization, programming, research synthesis, mathematical modeling, documentation, and technical problem-solving.</p>
         </div>
       </div>
     </section>
