fixed Meet Our Team page

--- a/thought-leadership.html
+++ b/thought-leadership.html
@@ -289,7 +289,7 @@
     <section class="section section-alt">
       <div class="section-inner">
         <h2 class="team-section-title">Board Members</h2>
-        <p class="team-section-subtitle">Leadership and vision from our board of directors.</p>
+        <p class="team-section-subtitle">Leadership Shaping Our Mission and Direction</p>
         <div class="team-grid">
           <a href="nick-sickler.html" style="text-decoration: none; color: inherit;">
             <div class="team-card">
@@ -322,7 +322,7 @@
     <section class="section">
       <div class="section-inner">
         <h2 class="team-section-title">Our Thought Leaders</h2>
-        <p class="team-section-subtitle">Explore insights and perspectives from our team of experienced consultants and industry experts.</p>
+        <p class="team-section-subtitle">Driving Insight, Innovation, and Industry Expertise</p>
         <div class="team-grid">
           <a href="rachel-demuth.html" style="text-decoration: none; color: inherit;">
             <div class="team-card">
@@ -363,7 +363,7 @@
     <section class="section section-alt">
       <div class="section-inner">
         <h2 class="team-section-title">Featured Team Members</h2>
-        <p class="team-section-subtitle">Discover more about our talented consulting professionals and their expertise.</p>
+        <p class="team-section-subtitle">Team Members Driving Key Initiatives</p>
         <div class="team-grid">
           <a href="soorya-rajendran.html" style="text-decoration: none; color: inherit;">
             <div class="team-card">
