changed service lines to services

--- a/3_n_homepage_preview (1).html
+++ b/3_n_homepage_preview (1).html
@@ -256,7 +256,7 @@
       <nav class="nav-links">
         <a href="#" class="active">Home</a>
         <a href="#">About Us</a>
-        <a href="#">Service Lines</a>
+        <a href="#">Services</a>
         <a href="#">Careers</a>
         <a href="#">Contact Us</a>
         <a href="#">Thought Leadership</a>
@@ -518,7 +518,7 @@
       <div class="footer-links">
         <a href="#">LinkedIn</a>
         <a href="#">About Us</a>
-        <a href="#">Service Lines</a>
+        <a href="#">Services</a>
         <a href="#">Careers</a>
         <a href="#">Thought Leadership</a>
         <a href="#">Contact Us</a>
