--- a/services.html
+++ b/services.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Service Lines - 3N Consulting</title>
+  <title>Services - 3N Consulting</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     /* Inline CSS so this preview actually renders with layout */
@@ -276,7 +276,7 @@
       <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
-        <a href="services.html" class="active">Service Lines</a>
+        <a href="services.html" class="active">Services</a>
         <a href="careers.html">Careers</a>
         <a href="contact.html">Contact Us</a>
         <a href="thought-leadership.html">Meet Our Team</a>
@@ -292,7 +292,7 @@
       <div class="hero-inner">
         <div>
           <div class="hero-eyebrow">Comprehensive Solutions</div>
-          <h1 class="hero-title">Service Lines</h1>
+          <h1 class="hero-title">Services</h1>
           <p class="hero-body">
             Consulting solutions tailored to your organization's unique needs and challenges.
           </p>
