--- a/anirudh-peesay.html
+++ b/anirudh-peesay.html
@@ -252,7 +252,7 @@
       <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
-        <a href="services.html">Service Lines</a>
+        <a href="services.html">Services</a>
         <a href="careers.html">Careers</a>
         <a href="contact.html">Contact Us</a>
         <a href="thought-leadership.html" class="active">Meet Our Team</a>
