--- a/cosmetics-manufacturer.html
+++ b/cosmetics-manufacturer.html
@@ -314,7 +314,7 @@
       <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
-        <a href="services.html">Service Lines</a>
+        <a href="services.html">Services</a>
         <a href="careers.html">Careers</a>
         <a href="contact.html">Contact Us</a>
         <a href="thought-leadership.html">Meet Our Team</a>
