--- a/digital-transformation.html
+++ b/digital-transformation.html
@@ -208,7 +208,7 @@
       <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
-        <a href="services.html">Service Lines</a>
+        <a href="services.html">Services</a>
         <a href="careers.html">Careers</a>
         <a href="contact.html">Contact Us</a>
         <a href="thought-leadership.html">Meet Our Team</a>
@@ -443,7 +443,7 @@
       <div class="footer-links">
         <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
         <a href="about.html">About Us</a>
-        <a href="services.html">Service Lines</a>
+        <a href="services.html">Services</a>
         <a href="careers.html">Careers</a>
         <a href="thought-leadership.html">Meet Our Team</a>
         <a href="contact.html">Contact Us</a>
