--- a/solutions.html
+++ b/solutions.html
@@ -23,7 +23,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="services.html">Service Lines</a></li>
+                    <li><a href="services.html">Services</a></li>
                     <li><a href="careers.html">Careers</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="thought-leadership.html">Meet Our Team</a></li>
@@ -106,7 +106,7 @@
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="services.html">Service Lines</a></li>
+                        <li><a href="services.html">Services</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                         <li><a href="disclaimers.html">Disclaimers</a></li>
                     </ul>
